2025-03-18T12:15:53Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/13922945710 # 884
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-03-18
* notice: last 14d: unq all: 42 93
* notice: prev accum: outdated-unq outdated-all / unq all: 3985 8595 / 4051 8689
* notice: next accum: outdated-unq outdated-all / unq all: 3986 8597 / 4052 8690
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-03-04] / [2025-03-18]

2025-03-17T12:15:59Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/13899184794 # 882
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-03-17
* notice: last 14d: unq all: 42 94
* notice: prev accum: outdated-unq outdated-all / unq all: 3984 8594 / 4050 8688
* notice: next accum: outdated-unq outdated-all / unq all: 3985 8595 / 4051 8689
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-03-03] / [2025-03-17]

2025-03-16T12:13:29Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/13883207193 # 880
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-03-16
* notice: last 14d: unq all: 42 94
* notice: prev accum: outdated-unq outdated-all / unq all: 3983 8593 / 4049 8687
* notice: next accum: outdated-unq outdated-all / unq all: 3984 8594 / 4050 8688
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-03-02] / [2025-03-16]

2025-03-16T00:44:26Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/13878193163 # 879