@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-03-18T12:15:53Z",
+  "timestamp" : "2025-03-19T00:41:24Z",
   "count_outdated" : 8597,
   "uniques_outdated" : 3986,
-  "count" : 8690,
-  "uniques" : 4052,
+  "count" : 8691,
+  "uniques" : 4053,
   "clones" : [
     {
       "timestamp": "2025-03-05T00:00:00Z",
@@ -124,12 +124,12 @@
     },
     {
       "timestamp": "2025-03-18T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
